fixed main background image overflow

--- a/css/colorPalette.css
+++ b/css/colorPalette.css
@@ -4,7 +4,7 @@
     --hero-text: rgb(252, 238, 223);;
     --text: #f3e7db;
     --text-disabled: #3d4a4a;
-    --hero-title: #a01414; 
+    --hero-title: rgb(197, 74, 3);
     --hero-title-highlight: #ff4b4b; 
     --title: #ffcc66; 
     --titleHighlight: #ff9940;
