--- a/css/hero.css
+++ b/css/hero.css
@@ -88,21 +88,11 @@
   #hero-background-lights
   {
     opacity: 15%;
-    mask-image: linear-gradient(90deg, #0000 0%, #ffff 40%, #ffff 60%, #0000 100%);
-    mask-size: 100% 100%;
-    mask-repeat: no-repeat no-repeat;
-    animation: clip-fade infinite 4s;
-  
-     background-image: url("../assets/images/backgrounds/background-vertically-tiling-lights-2.png");
-    background-repeat: repeat-y;
-    background-size: cover;
-    z-index: 3;
+    z-index: 3; /* over hero background but under hero foreground */
     position:absolute;
     top: 0vh; 
-    overflow-y: hidden;
-    overflow-x: hidden;
-    height: 100%;
-    width: 100%;
+    background-size: cover;
+    
   }
 
   #hero-title-normal {
@@ -200,22 +190,6 @@ margin:auto;
 
 
 
-#hero-transition-wrapper{
-  position: absolute;
-  top: 99vh;
-  z-index: 7;
-  height: 3vh;
-  @media (orientation: portrait) {
-    height: 2vh;
-  }
-}
-
-#hero-transition{
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  z-index: 1000;
-}
 
 
 
