--- a/css/style.css
+++ b/css/style.css
@@ -1,143 +1,124 @@
-
 html {
   box-sizing: padding-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-*{
+* {
   margin: 0px 0px 0px 0px;
 }
 
-@keyframes clip-fade {
-0%
-{
-  mask-position: 100vw;
+.nav-anchor{
+  /*should be invisible*/
+  display:none; 
 }
+
+
+
+#hero-transition-wrapper {
+  position: absolute;
+  bottom: -2.5vh;
+  z-index: 6; /* must be above #content */
+  height: 3vh;
+  @media (orientation: portrait) {
+    height: 2vh;
+  }
+}
+
+#hero-transition {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+#content {
+  position: absolute;
+  z-index: 5; /* force above hero-title */
+}
+
+#background-image {
+  background-image: url("../assets/images/backgrounds/background-vertically-tiling-2.png");
+  height: 100%;
+  width: 100%;
+  background-repeat: repeat-y;
+  background-size: cover;
+  z-index: -1; /* force below content */
+  position: absolute;
+  top: 0vh;
+}
+
+@keyframes light-pulse {
+  0% {
+    mask-position: 100vw;
+  }
 
   100% {
     mask-position: -100vw;
-
-}
-}
-
-#content
-{
-  position: absolute;
-  z-index: 100;
+  }
 }
 
-#background-wrapper
-{
-  z-index: -3;
-  position:absolute;
-width: 100%;
-height: 100%;
-}
+.background-lights {
 
-#background-container{
-  height: 400vh;
-  width: 100%;
-  overflow: hidden;
-}
-
-
-#background-image{
-  background-image: url("../assets/images/backgrounds/background-vertically-tiling-2.png");
-  height: 320vh;
-  width: 100%;
+  background-image: url("../assets/images/backgrounds/background-vertically-tiling-lights-2.png");
   background-repeat: repeat-y;
-  background-size: contain;
-  z-index: 5;
-  position:relative;
+  background-size: cover;
+  position: relative;
   top: 0vh;
-  overflow-y: hidden;
-  overflow-x: hidden;
 
-}
-
-#background-image-lights
-{
-  mask-image: linear-gradient(90deg, #0000 0%, #ffff 40%, #ffff 60%, #0000 100%);
-  mask-size: 100% 100%;
-  mask-repeat: no-repeat no-repeat;
-  animation: clip-fade infinite 4s;
-
-   background-image: url("../assets/images/backgrounds/background-vertically-tiling-lights-2.png");
-  background-repeat: repeat-y;
-  background-size: contain;
-  z-index: 7;
-  position:relative;
-  top: 0vh; 
-  overflow-y: hidden;
-  overflow-x: hidden;
   height: 100%;
   width: 100%;
+
+  mask-image: linear-gradient(
+    90deg,
+    #0000 0%,
+    #ffff 40%,
+    #ffff 60%,
+    #0000 100%
+  );
+
+  mask-size: 100% 100%;
+  mask-repeat: no-repeat no-repeat;
+
+  animation: light-pulse infinite 4s;
+
 }
 
 
 
-
-
-body {
-  background-color: var(--windowBackground);
-
-
-}
-
-
-
-
-.summary
-{
+.summary {
   padding-top: 10vh;
-  height:50vh;
-
-}
-
-section {
-
-
-  position: relative;
-
-  margin: auto;
-
+  height: 50vh;
 }
 
 
 
-/*TODO: update these placeholder colours*/
 a:link {
   color: rgb(197, 74, 3);
 }
 
 a:visited {
-color: rgb(110, 110, 213);
+  color: rgb(110, 110, 213);
 }
 
 a:hover {
-color: rgb(180, 104, 255);
+  color: rgb(180, 104, 255);
 }
 
 a:active {
-color: rgb(255, 255, 255);
-} 
-  
-#anchorLink 
-  {
-    a, a:hover, a:visited, a:active {
-      color: inherit !important;
-      text-decoration: none !important;
-     }
+  color: rgb(255, 255, 255);
+}
+
+#anchorLink {
+  a,
+  a:hover,
+  a:visited,
+  a:active {
+    color: inherit !important;
+    text-decoration: none !important;
   }
-
-
-
-
-
+}
 
 /* inViewport */
-
-
-
